Added file input, and creates inverse algs, and scrambles

--- a/Skewb-NS2-Trainer/index.html
+++ b/Skewb-NS2-Trainer/index.html
@@ -30,9 +30,11 @@
 		}
 	</style>
 	<script src="https://colorjs.io/dist/color.global.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script src="algsinfo.js"></script>
+	<!-- old scrams for ns and eg
 	<script src="scrambles.js"></script>
+-->
 	<script src="../src/utils.js"></script>
 	<script src="../src/selection.js"></script>
 	<script src="../src/timedetails.js"></script>
@@ -40,6 +42,10 @@
 	<script src="../src/practice.js"></script>
 	<script src="../src/settings.js"></script>
 	<script src="../src/main.js" defer></script>
+	
+	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+	<script src="processAlgs.js"></script>
+	<script src="worker.js"></script>
 </head>
 <body class="niceBody"></body>
 </html>
