--- a/Skewb-NS2-Trainer/index.html
+++ b/Skewb-NS2-Trainer/index.html
@@ -42,7 +42,7 @@
 	<script src="../src/practice.js"></script>
 	<script src="../src/settings.js"></script>
 	<script src="../src/main.js" defer></script>
-	
+	<!-- additions -->
 	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 	<script src="processAlgs.js"></script>
 	<script src="worker.js"></script>
