started on selection process and working on algsinfo

--- a/Skewb-NS2-Trainer/index.html
+++ b/Skewb-NS2-Trainer/index.html
@@ -46,6 +46,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 	<script src="processAlgs.js"></script>
 	<script src="worker.js"></script>
+	<script src="../src/MySelection.js"></script>
 </head>
 <body class="niceBody"></body>
 </html>
