--- a/Skewb-NS2-Trainer/index.html
+++ b/Skewb-NS2-Trainer/index.html
@@ -47,7 +47,7 @@
 	<script src="processAlgs.js"></script>
 	<script src="worker.js"></script>
 	<script src="../src/MySelection.js"></script>
-	<script src="findSkewbCornerRotation.js"></script>
+	<script src="../src/findSkewbCornerRotation.js"></script>
 </head>
 <body class="niceBody"></body>
 </html>
