--- a/template.html
+++ b/template.html
@@ -58,6 +58,9 @@
 			<div id="presetsSettings" class="colFlex" style="width: fit-content; max-width: 100%;"></div>
 			<div style="width: 100%; text-align: right;"><a onclick="openDialog('aboutDialog')">credits</a></div>
 		</div>
+		<div id="addGroups">
+
+		</div>
 		<div id="cases_selection" style="width: 100%;" class="colFlex">
 		</div>
 	</div> <!-- selection layout -->
