started on export funciton

--- a/Skewb-NS2-Trainer/index.html
+++ b/Skewb-NS2-Trainer/index.html
@@ -48,6 +48,7 @@
 	<script src="worker.js"></script>
 	<script src="../src/MySelection.js"></script>
 	<script src="../src/findSkewbCornerRotation.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/exceljs@4.4.0/dist/exceljs.min.js"></script>
 </head>
 <body class="niceBody"></body>
 </html>
