--- a/template.html
+++ b/template.html
@@ -55,11 +55,16 @@
 			</div>
 		</div>
 		<div class="borderedContainer colFlex pad center" style="background-color: var(--backgroundDarker);">
-			<div id="presetsSettings" class="colFlex" style="width: fit-content; max-width: 100%;"></div>
-			<div style="width: 100%; text-align: right;"><a onclick="openDialog('aboutDialog')">credits</a></div>
+			<!--
+			<div id="presetsSettings" class="colFlex" style="width: fit-content; max-width: 100%;"></div> -->
+			<div id = "creditsContainer">
+				<button id="saveBtn">save to csv</button>
+				<div style="width: 100%; text-align: right;" id="creditsLink"><a onclick="openDialog('aboutDialog')">credits</a></div>
+			</div>
+			
 		</div>
-		<div id="addGroups">
-
+		<div id="addGroups"> 
+			
 		</div>
 		<div id="cases_selection" style="width: 100%;" class="colFlex">
 		</div>
