--- a/template.html
+++ b/template.html
@@ -37,7 +37,8 @@
 		</div>
 	</div> <!-- practice_layout -->
 
-	<div id='selectionLayout' class="colFlex scroller" style="margin: 0.5em; max-width: 70em; display: none; transition: width 0.2s;">
+	<div id='selectionLayout' class="colFlex scroller"
+		style="margin: 0.5em; max-width: 70em; display: none; transition: width 0.2s;">
 		<div class="colFlex">
 			<div class="rowFlex center" style="justify-content: space-between;">
 				<h1 id="trainerTitle">Some Trainer</h1>
@@ -57,14 +58,21 @@
 		<div class="borderedContainer colFlex pad center" style="background-color: var(--backgroundDarker);">
 			<!--
 			<div id="presetsSettings" class="colFlex" style="width: fit-content; max-width: 100%;"></div> -->
-			<div id = "creditsContainer">
-				<button id="saveBtn">save to csv</button>
-				<div style="width: 100%; text-align: right;" id="creditsLink"><a onclick="openDialog('aboutDialog')">credits</a></div>
+			<div id="creditsContainer">
+				<button id="saveBtn" onclick="saveToCsv(); alert('Selection saved successfully!')">
+					save to csv
+				</button>
+
+				<button id="saveLocalBtn" onclick="saveLocally()">
+					save to website
+				</button>
+				<div style="width: 100%; text-align: right;" id="creditsLink"><a
+						onclick="openDialog('aboutDialog')">credits</a></div>
 			</div>
-			
+
 		</div>
-		<div id="addGroups"> 
-			
+		<div id="addGroups">
+
 		</div>
 		<div id="cases_selection" style="width: 100%;" class="colFlex">
 		</div>
@@ -91,13 +99,14 @@
 			<div class="borderedContainer grow colFlex pad" style="min-height: 5em; justify-content: space-between;">
 				<div id='boxalg' class="rowFlex grow"></div>
 				<div class="rowFlex">
-					<span onclick="downloadCustomAlgs()" id="downloadButton" class="material-symbols-outlined abutton grow" >
+					<span onclick="downloadCustomAlgs()" id="downloadButton"
+						class="material-symbols-outlined abutton grow">
 						download
 					</span>
-					<label id="uploadButton" for="uploadFile" class="material-symbols-outlined abutton grow" >
+					<label id="uploadButton" for="uploadFile" class="material-symbols-outlined abutton grow">
 						upload
 					</label><input type="file" id="uploadFile" style="display: none;" onchange="uploadCustomAlgs()">
-					<span onclick="editAlg()" id="editAlgButton" class="material-symbols-outlined abutton grow" >
+					<span onclick="editAlg()" id="editAlgButton" class="material-symbols-outlined abutton grow">
 						edit
 					</span>
 				</div>
@@ -129,7 +138,8 @@
 				<div>Weighted choice</div>
 				<!-- Rounded switch -->
 				<label class="switch">
-					<input onclick="toggleWeightedChoice(this);" type="checkbox" id="weighted_choice_on_off" value="using">
+					<input onclick="toggleWeightedChoice(this);" type="checkbox" id="weighted_choice_on_off"
+						value="using">
 					<span class="slider round"></span>
 				</label>
 			</div>
@@ -171,8 +181,8 @@
 			</div>
 			<div class="settingsEntry">
 				<div>Text</div>
-				<div style="background-color: var(--text);"></div><input type='text' value='#ffffff' class='settinginput'
-					id='--text' onchange="changeColor(event);" placeholder='oklch(1 0 360)'
+				<div style="background-color: var(--text);"></div><input type='text' value='#ffffff'
+					class='settinginput' id='--text' onchange="changeColor(event);" placeholder='oklch(1 0 360)'
 					style="background-color: var(--text); color: var(--background);" />
 			</div>
 			<div class="settingsEntry">
@@ -198,20 +208,42 @@
 			<div class="borderedContainer pad rowFlex" style="flex-wrap: wrap; gap: 2em">
 				<div class="colFlex">
 					<span>Alg-sheets</span>
-					<a href="https://docs.google.com/spreadsheets/d/1j-SGlgZk20D3d2TyeiXhMWzeyTBuuix3Owgj9Q8rNbo/edit#gid=1373252438">Skewb Resources</a>
-					<a href="https://docs.google.com/spreadsheets/d/175ZOo4a9MwglJCnoJ3bWkPOhLhG__kPX4uVSkJMHwio/edit#gid=0">Skewb Algs</a>
-					<a href="https://docs.google.com/spreadsheets/d/12FH8MswpdBJxLJ_Eu_gopoxTCySPk9H_o7_yjN8_ECw/edit#gid=566431744">The Pyraminx Sheet</a>
-					<a href="https://docs.google.com/spreadsheets/d/1lVODoMORbDdVXwTG4RUZPWCSrx8uPx2bvwvXg5tuQYE/edit#gid=165427832">James' Megaminx Algs</a>
-					<a href="https://docs.google.com/spreadsheets/d/17Ym3zUyYXX9NzFcPw5iCs-3fXAjfqCezK-Dsofv8A2Y/edit#gid=288801998">Ore's Mega Dot OLLs</a>
-					<a href="https://docs.google.com/spreadsheets/d/1OFXakCV85Mp2zsQBXMxiMX9a506JeAcLnUXZr8FgXAY/edit#gid=1684065307">Best 2x2 Algs</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/1j-SGlgZk20D3d2TyeiXhMWzeyTBuuix3Owgj9Q8rNbo/edit#gid=1373252438">Skewb
+						Resources</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/175ZOo4a9MwglJCnoJ3bWkPOhLhG__kPX4uVSkJMHwio/edit#gid=0">Skewb
+						Algs</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/12FH8MswpdBJxLJ_Eu_gopoxTCySPk9H_o7_yjN8_ECw/edit#gid=566431744">The
+						Pyraminx Sheet</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/1lVODoMORbDdVXwTG4RUZPWCSrx8uPx2bvwvXg5tuQYE/edit#gid=165427832">James'
+						Megaminx Algs</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/17Ym3zUyYXX9NzFcPw5iCs-3fXAjfqCezK-Dsofv8A2Y/edit#gid=288801998">Ore's
+						Mega Dot OLLs</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/1OFXakCV85Mp2zsQBXMxiMX9a506JeAcLnUXZr8FgXAY/edit#gid=1684065307">Best
+						2x2 Algs</a>
 					<a href="https://crazymonkeyonspeed.github.io/">Frederik's FH Algs</a>
 					<a href="https://www.youtube.com/@BrinaSun">Brian Sun 3x3 Algs</a>
 					<a href="https://speedcubedb.com/">SpeedCubeDB</a>
-					<a href="https://docs.google.com/document/d/1nkgNFdAu9v6p871urGrdkKD-QGmftYhjqZjD75z4Wqo/edit#heading=h.zf1ib2cgt533">Octaminx TCP</a>
-					<a href="https://docs.google.com/spreadsheets/d/1uc5V3G-kRH3qV5b6Lq1yzTjnqSMS3D3dZcsCIOiJqcI/edit?gid=1409661599#gid=1409661599">2H CMLL</a>
-					<a href="https://docs.google.com/spreadsheets/d/1WHnksK4yyv63sv3Es-PuKfnFRtZGafqp6rEuEfOx-cg/edit?gid=1409661599#gid=1409661599">OH CMLL</a>
-					<a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSKmPOKUtF0g1FUn7wEFtyZJFYegBXuYxlA4ZcUDYmoqC4xBQOXnsaKgAydGoohlI-c97HeRpMyec7d/pubhtml?gid=0&single=true">OH PLL</a>
-					<a href="https://docs.google.com/spreadsheets/d/1-uwmZHf4vwJxFgeB3-TiF8MQ0RFSS30d5CUK96PoIwk/edit?gid=0#gid=0">Juju ZBLL</a>
+					<a
+						href="https://docs.google.com/document/d/1nkgNFdAu9v6p871urGrdkKD-QGmftYhjqZjD75z4Wqo/edit#heading=h.zf1ib2cgt533">Octaminx
+						TCP</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/1uc5V3G-kRH3qV5b6Lq1yzTjnqSMS3D3dZcsCIOiJqcI/edit?gid=1409661599#gid=1409661599">2H
+						CMLL</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/1WHnksK4yyv63sv3Es-PuKfnFRtZGafqp6rEuEfOx-cg/edit?gid=1409661599#gid=1409661599">OH
+						CMLL</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSKmPOKUtF0g1FUn7wEFtyZJFYegBXuYxlA4ZcUDYmoqC4xBQOXnsaKgAydGoohlI-c97HeRpMyec7d/pubhtml?gid=0&single=true">OH
+						PLL</a>
+					<a
+						href="https://docs.google.com/spreadsheets/d/1-uwmZHf4vwJxFgeB3-TiF8MQ0RFSS30d5CUK96PoIwk/edit?gid=0#gid=0">Juju
+						ZBLL</a>
 				</div>
 				<div class="colFlex">
 					<span>Other</span>
